docs: fix contrast + sidebar style (#576)
- fix color contrast of left sidebar selection
- align more to Mux docs sidebar styles

--- a/docs/src/styles/index.css
+++ b/docs/src/styles/index.css
@@ -406,7 +406,6 @@ h2.heading {
   font-size: 1rem;
   font-weight: 700;
   padding: 0.1rem 1rem;
-  text-transform: uppercase;
   margin-bottom: 0.5rem;
 }
 
